working on view automation

--- a/static/style.css
+++ b/static/style.css
@@ -80,6 +80,7 @@ hr {
 textarea::placeholder {
     color: black;
 }
+
 textarea:hover {
     background-color: #888;
 }
@@ -104,7 +105,6 @@ textarea {
     background-color: #666;
     width: 250px;
 }
-
 
 input[type='checkbox']:focus {
     transform: translate(0, 0);
@@ -414,7 +414,7 @@ button {
 .tooltip .tooltiptext {
     font-size: 15px;
     display: none;
-    width: 120px;
+    /* width: 120px; */
     background-color: black;
     color: #fff;
     text-align: center;
@@ -608,8 +608,8 @@ button {
 
 .github_repo:hover {
     background-color: #303030;
-
 }
+
 .github_repo {
     padding: 5px;
     background-color: #000000;
@@ -619,42 +619,45 @@ button {
     user-select: none;
     font-size: 15px;
     margin: 5px 0;
-    width:auto;
+    width: auto;
     /* word-wrap: normal; */
 }
 
-.profile-stat-data:hover{
+.profile-stat-data:hover {
     color: var(--YELLOWISH);
 }
-.profile-stat-data{
+
+.profile-stat-data {
     transition: 0.2s;
     font-weight: 600;
     font-size: 25px;
     padding: 15px;
     color: var(--YELLOWISH__fade1);
 }
-.profile-stat-heading{
+
+.profile-stat-heading {
     color: #afafaf;
     font-weight: 400;
     font-size: 18px;
 }
-.profile-stat{
+
+.profile-stat {
     user-select: none;
     flex-grow: 1;
     text-align: center;
     padding-top: 20px;
 }
+
 .profile-head:hover {
     box-shadow: 0 8px 6px -5px var(--ORANGEISH);
     background: linear-gradient(180deg, #000 40%, #121212 100%);
-
 }
+
 .profile-head {
     transition: 0.2s;
     width: 100%;
     height: 180px;
     background: linear-gradient(180deg, #000 35%, #121212 100%);
-    
     box-shadow: 0 8px 6px -7px var(--ORANGEISH__fade1);
     /* padding-top: 80px; */
     position: relative;
@@ -664,46 +667,60 @@ button {
     transform: rotate(10deg);
     border-radius: 40%;
 }
+
 #ProfilePicture_MAIN:hover {
     width: 125px;
     height: 125px;
     box-shadow: 2px 2px 3px black;
 }
-#profilePicture-holder{
+
+#profilePicture-holder {
     user-select: none;
     position: absolute;
     bottom: -55px;
     left: 20%;
-    
 }
+
 #ProfilePicture_MAIN {
     border-radius: 50%;
     transition: 0.2s;
     width: 120px;
     height: 120px;
 }
-#buttons-container{
+
+#buttons-container {
     position: absolute;
-    bottom: -25px; 
+    bottom: -25px;
     right: 10%;
 }
-.profile-btn:hover{
+
+.profile-btn:hover {
     border: 1px solid var(--YELLOWISH__fade2);
-    
 }
-.profile-btn{
+
+.profile-btn {
     border: 2px solid var(--YELLOWISH);
 }
-#username{
+
+#username {
     font-size: 20px;
     font-weight: 500;
     display: inline-block;
     position: absolute;
-    top: 45%;
+    top: 20%;
     padding: 0 5px;
     color: var(--ORANGEISH);
     text-shadow: 2px 2px 5px black;
 }
+
+#user-badges {
+    display: inline-block;
+}
+.user-badge {
+    width: 18px;
+
+}
+
 /* FOR PHONES */
 
 @media only screen and (max-device-width: 640px) {
@@ -732,30 +749,36 @@ button {
         padding: 0%;
         width: 100%;
     }
-    .profile-head{
+    .profile-head {
         height: 150px;
     }
-    .profile-stat-heading{
+    .profile-stat-heading {
         font-size: 14px;
     }
-    .profile-stat-data{
+    .profile-stat-data {
         font-size: 22px;
     }
-    #ProfilePicture_MAIN:hover{
-        width: 105px;
-        height: 105px;
-    }
-    #ProfilePicture_MAIN{
-        width: 100px;
+    #profilePicture-holder {
         left: 5%;
-        height: 100px;
+        bottom: -35px;
     }
-    #buttons-container{
+    #username {
+        top: 0%;
+    }
+    #ProfilePicture_MAIN:hover {
+        width: 67px;
+        height: 67px;
+    }
+    #ProfilePicture_MAIN {
+        width: 65px;
+        height: 65px;
+    }
+    #buttons-container {
         text-align: right;
         right: 5%;
         bottom: -35px;
     }
-    .profile-btn{
+    .profile-btn {
         margin: 5px;
         font-size: 10px;
         align-self: right;
@@ -764,7 +787,6 @@ button {
         width: 100%;
         padding: 5px;
     }
-    
 }
 
 /* SCROLLBAR */
