--- a/static/style.css
+++ b/static/style.css
@@ -744,7 +744,7 @@ button {
         width: 90%;
     }
     .slate-container {
-        height: 100%;
+        /* height: 100%; */
         margin: 0;
         padding: 0%;
         width: 100%;
