--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -7,6 +7,7 @@
 
 
     <div class="flex-row" style="height: 97%;">
+
         <div id="chats-list">
             {% for chat in CHATS %}
             <div class="chat-head" id="chat-{{chat.id}}" onclick="setActiveChat({{chat.id}});">
@@ -17,85 +18,65 @@
         </div>
 
 
-        <div id="active-chat">
-            <div id="active-chat-header">
 
+        <div id="active-chat" class="flex-column">
+            <div style="height: 100%;">
+
+                <div id="active-chat-header">
+
+                </div>
+
+                <div id="messages" class="flex-column"></div> <!-- Fetch and pastes messages from the server -->
             </div>
 
-            <div id="messages" class="flex-column">
 
+            <div id="sendmessage_hud">
 
-
+                <div style="color: #FFDD34;" id="send_msg" class="fas fa-laugh sendmessage_hud_icon"></div>
+                <textarea placeholder="Type your message here..." name="sendmessage_textarea" id="sendmessage_textarea"></textarea>
+                <div id="send_msg" class="fas fa-paper-plane sendmessage_hud_icon"></div>
 
             </div>
-
-
         </div>
+
+
+
     </div>
     <style>
+        .sendmessage_hud_icon{
+            transition: 0.2s;
+        }
+        .sendmessage_hud_icon:hover{
+            transform: translate(-2px, -2px);
+            color: var(--ORANGEISH);
+        }
+        .sendmessage_hud_icon:active{
+            transform: translate(2px, 2px);
+        }
         #messages {
             overflow-y: auto;
         }
 
-        .message-author img {
-            width: 20px;
-            border-radius: 50%;
-        }
-
-        .inner_message-author {
-            right: 0%;
-        }
-
-        .outer_message-author {
-            left: 0%;
-        }
-
-        .message-author {
-            margin: 7px;
+        #sendmessage_hud {
             padding: 5px;
-            position: absolute;
+            display: flex;
+            margin: 3px;
         }
 
-        .message-sent-time {
-            position: absolute;
-            font-size: 11px;
-            bottom: 25%;
-            right: 50%;
-            visibility: hidden;
-            color: #aeaeae;
-            font-weight: 700;
-        }
-
-        .message-wrapper {
+        #sendmessage_textarea {
             width: 100%;
-            position: relative;
+            margin: 0%;
+            height: 20px;
+            resize: none;
+
         }
 
-
-        .message:hover .message-sent-time {
-            visibility: visible;
-        }
-
-        .message {
-            padding: 5px;
-            border-radius: 5px;
-            width: fit-content;
-            max-width: 40%;
-            color: black;
-            margin: 7px;
-        }
-
-        .inner_message {
-            float: right;
-            background-color: #202020;
-            margin-right: 40px;
-        }
-
-        .outer_message {
-            margin-left: 40px;
-            float: left;
-            background-color: var(--ORANGEISH);
-
+        #send_msg {
+            font-size: 25px;
+            vertical-align: middle;
+            padding: 0 5px;
+            vertical-align: middle;
+            /* background-color: blue; */
         }
     </style>
 
@@ -110,7 +91,6 @@
 
             fetchMessages(chat_id);
         }
-
 
         function fetchMessages(chat_id) {
 
