unwanted keyword... hosts() ??? wth

--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -129,6 +129,11 @@
 
         }
 
+
+        // SOckets and stuff
+        const ws_url = 'ws/connect_to_server/';
+        const serverSocket = new WebSocket(`ws://${window.location.host}/${ws_url}`);
+
     </script>
 
 
