--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -15,7 +15,7 @@
 
         <div class="profile-stat">
             <div class="profile-stat-heading">Automations</div>
-            <div class="profile-stat-data">3</div>
+            <div class="profile-stat-data">{{AUTOMATIONS_count}}</div>
 
         </div>
         <div class="profile-stat">
