now the client reconnects to the server automatically when socket connection closed with code 1006

--- a/templates/base.html
+++ b/templates/base.html
@@ -184,29 +184,47 @@
 </body>
 {% block postdoc_script %}{% endblock postdoc_script %}
 
-<!-- MOTHER SOCKET -->
+<!-- MOTHER SERVER SOCKET -->
 <script>
 
-    const serverSocket = new WebSocket(`ws://${window.location.host}/ws/connect_to_server/`);
+    let serverSocket = null;
 
-    serverSocket.onopen = function (e) {
-        console.log("Connection established");
-    };
+    function connectToMotherServer_ws() {
+        
+        serverSocket = new WebSocket(`ws://${window.location.host}/ws/connect_to_server/`);
 
-    serverSocket.onmessage = (e) => {
-        const SOCKETDATA = JSON.parse(e.data);
-        console.log(SOCKETDATA);
+        serverSocket.onopen = function (e) {
+            console.log("Connection established");
+        };
+
+        serverSocket.onmessage = (e) => {
+            const SOCKETDATA = JSON.parse(e.data);
+            console.log(SOCKETDATA);
+        }
+
+        serverSocket.onclose = function (event) {
+            if (event.wasClean) {
+                console.warn(`Connection closed cleanly, code=${event.code} reason=${event.reason}`);
+            } else {
+                // e.g. server process killed or network down
+                // event.code is usually 1006 in this case
+                console.warn('Connection died!');
+
+
+                console.log('Connection to MOTHER SERVER is closed. Reconnect will be attempted in 1 second.');
+                setTimeout(function () {
+                    connectToMotherServer_ws();
+                }, 1000);
+            }
+
+
+        };
+
     }
 
-    serverSocket.onclose = function (event) {
-        if (event.wasClean) {
-            console.warn(`Connection closed cleanly, code=${event.code} reason=${event.reason}`);
-        } else {
-            // e.g. server process killed or network down
-            // event.code is usually 1006 in this case
-            console.warn('[close] Connection died');
-        }
-    };
+    connectToMotherServer_ws();
+
+
 </script>
 
 </html>
