--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -132,7 +132,15 @@
 
 
         // Messaging Sockets and stuff
-        
+        let sampleWSJSON = {
+            "__TYPE__": 'CHAT_MESSAGE',
+            "CONTENT": {
+                "CHAT_ID": 45,
+                "MESSAGE": {
+                    "TEXT": 'watcha doin mate?'
+                }
+            },
+        }
         
 
     </script>
